kubernetes/cluster/privacy/ignis/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ignis
  namespace: privacy
  labels:
    app.kubernetes.io/name: ignis
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://obsidian.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: >-
      http://authentik-outpost-embedded.default.svc.cluster.local.:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
spec:
  rules:
    - host: obsidian.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ignis
                port:
                  number: 8080
  tls:
    - hosts:
        - obsidian.brhd.io
